# hermes-synapse

./: .dockerignore  .env.example  .gitignore  AUTONOMY.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  agent_network.dot  docker-compose.dev.yml  docker-compose.yml  test_docker.py
backend/: Dockerfile  Dockerfile.dev  activity_logger.py  agent.py  auth.py  autonomy.py  bot.py  capability_broker.py  control_plane.py  cost.py  database.py  google_auth.py  llm_client.py  logging_config.py  main.py  market_data.py  mcp_client.py  mcp_governance.py  mcp_openapi_proxy.py  memory.py  obsidian.py  ollama_client.py  orchestrator.py  price_monitor.py  pyproject.toml  rag.py  scheduler.py  skill_loop.py  subagents.py  test_full_flow.py  test_research.py  tools.py  tts.py  voice.py  websocket_manager.py
backend/exporters/: __init__.py  alpaca.py  base.py  openai.py  sharegpt.py
backend/openapi/: OpenApiCommonMessages_pb2.py  OpenApiCommonMessages_pb2_grpc.py  OpenApiCommonModelMessages_pb2.py  OpenApiCommonModelMessages_pb2_grpc.py  OpenApiMessages_pb2.py  OpenApiMessages_pb2_grpc.py  OpenApiModelMessages_pb2.py  OpenApiModelMessages_pb2_grpc.py
backend/tests/: test_activity_logs.py  test_agent.py  test_api.py  test_autonomy.py  test_bot_security.py  test_control_plane.py  test_cost.py  test_database.py  test_database_wal.py  test_dynamic_subagents.py  test_export_api.py  test_exporters.py  test_language_setting.py  test_llm_client.py  test_logging_config.py  test_market_data.py  test_obsidian.py  test_ollama_client.py  test_orchestrator.py  (+9 more)
(+64 files in other folders)
