[project]
name = "hermes-backend"
version = "1.2.0"
description = "Jarvis personal assistant backend (Hermes)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-telegram-bot>=20.3",
    "httpx>=0.24.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "websockets>=11.0",
    "qdrant-client>=1.13.2",
    "fastembed>=0.2.0",
    "matplotlib>=3.7.0",
    "docker>=6.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.7",
    "google-auth>=2.20.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.95.0",
    "todoist-api-python>=2.1.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
